--- a/src/CSS/Index.css
+++ b/src/CSS/Index.css
@@ -3,6 +3,7 @@ body{
     box-sizing: border-box;
     overflow-x: hidden;
     /* background-color: whitesmoke; */
+  min-height: 100vh;
 }
 .col-centered{
   margin: 0 auto;
@@ -412,11 +413,18 @@ form.Search_student::after {
   border-radius: 18px;
   border: 1px solid #cfcece;
 }
-footer{
-  position: relative;
-  top: 10rem;
-  height: 50px;
+.footer {
+  /*position: sticky;*/
+  left: 0;
+  bottom: 0;
   width: 100%;
+  background-color: #030303;
+  padding: 20px 0;
+  text-align: center;
+  color: #6c757d;
+}
+.payment{
+  min-height: 100vh;
 }
 @media (max-width: 991px) {
   .menu-btn{
